Bump version to 1.3.5
Renamed the methods in the parser class WMIC for a better understanding of what they do

HardwareID now generates a SHA256 digest of CPUID, MotherboardID and DiskIDs and now supports collection of multiple CPUIDs in case of systems where there is more than 1 Physical CPU